feat: gitlab授权判断修改

--- a/packages/vssue/src/styles/_variables.styl
+++ b/packages/vssue/src/styles/_variables.styl
@@ -1,5 +1,5 @@
 // the main color
-$vssue-theme-color ?= #3eaf7c
+$vssue-theme-color ?= #4569D4
 
 // the text color (used for common text)
 $vssue-text-color ?= #2c3e50
