--- a/packages/vssue/src/styles/index.styl
+++ b/packages/vssue/src/styles/index.styl
@@ -18,6 +18,7 @@
   font-size $vssue-font-size
   font-family $vssue-font-family
   padding 10px
+  margin-top 20px
   &, *
     box-sizing border-box
   :not(.vssue-comment-content)
